[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/amgusLotus.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/FlickerLight.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/AmgusLotus.gd" type="Script" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 flash_color: hint_color = vec4(1.0);
uniform float flash_modifier: hint_range(0.0, 1.0) = 1.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fireBullets"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 13.0384

[sub_resource type="CircleShape2D" id=6]
radius = 11.0454

[node name="AmgusLotus" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Sprite" parent="." index="0"]
material = SubResource( 2 )
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
hframes = 10
frame = 9

[node name="Center" parent="Sprite" index="0"]
position = Vector2( 0, 20 )

[node name="FlickerLight" parent="Sprite/Center" index="0" instance=ExtResource( 3 )]
color = Color( 0.956863, 0.752941, 1, 1 )
energy = 1.2

[node name="Muzzle" type="Node2D" parent="." index="1"]
position = Vector2( 0, -22 )

[node name="AnimationPlayer" parent="." index="3"]
autoplay = "Idle"
anims/Attack = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 5 )

[node name="EnemyStats" parent="." index="5"]
maxHealth = 4

[node name="HitBox" parent="." index="6"]
damage = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 6 )

[node name="BulletTimer" type="Timer" parent="." index="8"]
wait_time = 3.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="9"]
position = Vector2( 4.76837e-07, -15 )
scale = Vector2( 1.65, 1.45 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="HurtBox"]
[editable path="HitBox"]
